Fri May 11 18:35:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.inl:
        * ace/config-WinCE.h:
          Introduced ACE_LACKS_PERROR and set that in the wince file. Also
          refactored several methods that check for ACE_LACKS_FILELOCKS to
          first check this define, then ACE_WIN32, that way we don't need an
          explicit check for WinCE

Fri May 11 18:19:08 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * bin/tao_orb_tests.lst:
          Disable test run if messaging not built.

        * tests/run_test.lst:
          Create a few new flags to more granularily control automated
          test runs.

Fri May 11 17:53:46 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/generate_doxygen.pl:

          This script will now use $TAO_ROOT and $CIAO_ROOT to locate TAO and
          CIAO.  Also, DDS support has been added, config.h will only be
          written if it doesn't exist, and the -dot_path argument is ignored --
          the graphviz binary 'dot' is assumed to be on the PATH.

Fri May 11 16:12:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Reactor/Multicast/Log_Wrapper.cpp:
          Use ACE_OS::perror instead of perror directly to resolve compile
          errors with WinCE

Fri May 11 15:25:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2609_Regression.cpp:
        * tests/Bug_2610_Regression.cpp:
          Renamed TRACE to TEST_TRACE to resolve msvc warnings

Fri May 11 15:06:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Added !NO_NETWORK to some tests that we know don't work when ACE
          has been build without network support

Fri May 11 14:45:43 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/run_test.lst: Disable Bug_2368_Regression_Test. Per agreement
          with Johnny, the Bugzilla entry is now labeled an enhancement and