@@ -901,15 +901,13 @@ ACE_MAKE_SVC_CONFIG_FACTORY_NAME(ACE_VERSIONED_NAMESPACE_NAME,SERVICE_CLASS) (AC
 
 // This is being placed here temporarily to help stablelize the builds, but will
 // be moved out along with the above macros as part of the subsetting.  dhinton
-//# if !defined (ACE_HAS_WINCE)
-#   if !defined (ACE_LACKS_NEW_H)
-#     if defined (ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB)
-#       include /**/ <new>
-#     else
-#       include /**/ <new.h>
-#     endif /* ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB */
-#   endif /* ! ACE_LACKS_NEW_H */
-//# endif /* !ACE_HAS_WINCE */
+#if !defined (ACE_LACKS_NEW_H)
+#  if defined (ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB)
+#    include /**/ <new>
+#  else
+#    include /**/ <new.h>
+#  endif /* ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB */
+#endif /* ! ACE_LACKS_NEW_H */
 
 # define ACE_NOOP(x)
 
